@@ -1,7 +1,7 @@
 Package: seriation
 Type: Package
 Title: Infrastructure for Seriation
-Version: 1.1-3
+Version: 1.1-2.1
 Date: 2015-x-xx
 Authors@R: c(
 	person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
@@ -21,7 +21,7 @@ Classification/ACM: G.1.6, G.2.1, G.4
 URL: http://lyle.smu.edu/IDA/seriation
 BugReports: https://r-forge.r-project.org/projects/seriation/
 Depends: R (>= 2.14.0)
-Imports: TSP, grid, cluster, gclus, colorspace, MASS, gplots, registry, methods, stats, grDevices
+Imports: TSP, qap, grid, cluster, gclus, colorspace, MASS, gplots, registry, methods, stats, grDevices
 Suggests: biclust, testthat
 License: GPL-3
 Copyright: The code in src/bea.f is Copyright (C) 1991 F. Murtagh; 
